# ImEdit-testing

./: .gitignore  CMakeLists.txt  Readme.md
src/: cursor_movement_tests.cpp  main.cpp  text_edition.cpp
